Fix navigation bar dispay for viewport shift.

--- a/Lessons/02.Responsive-Websites/05.Starting-Small/Hometown/css/main.css
+++ b/Lessons/02.Responsive-Websites/05.Starting-Small/Hometown/css/main.css
@@ -95,7 +95,7 @@ ul {
 .nav__item {
   box-sizing: border-box;
   display: inline-block;
-  width: 24.7%;
+  width: 24.59%;
   text-align: center;
   line-height: 24px;
   padding: 24px;
